[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
egui = "0.27" # Asegúrate de que esta línea también esté presente

rand = "0.8"
arboard = "3.3"
image = { version = "0.24", default-features = false, features = ["png"] }